feat: go to next song

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="set_alarm">Set</string>
     <string name="stop_alarm">Stop</string>
     <string name="remove_alarm">Remove</string>
+    <string name="next_song">Next song</string>
 </resources>
