feat: song selector

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="stop_alarm">Stop</string>
     <string name="remove_alarm">Remove</string>
     <string name="next_song">Next song</string>
+    <string name="select_song">Select song</string>
 </resources>
