--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="remove_alarm">Remove</string>
     <string name="next_song">Next song</string>
     <string name="select_song">Select song</string>
+    <string name="fab_content_desc">Add new alarm</string>
 </resources>
