--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="fab_content_desc">Add new alarm</string>
     <string name="message_alarm_activated">Alarm set at %1$s</string>
     <string name="message_alarm_removed">Alarm is removed</string>
+    <string name="enter_playlist_id">Enter playlist id</string>
+    <string name="enter_next_song_id">Enter next song id</string>
     <string name="default_playlist">6sU9yIquDtGDUJ0ofpYAJV</string>
     <string name="default_next_song">spotify:track:5kl4Y5XymsUCl98GM7dgab</string>
 </resources>
