--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="default_next_song">spotify:track:5kl4Y5XymsUCl98GM7dgab</string>
     <string name="preference_file_key">android_alarm_clock_preferences</string>
     <string name="saved_notifications_key">saved_notifications_key</string>
+    <string name="saved_spotify_access_token">saved_spotify_access_token</string>
+    <string name="saved_spotify_access_token_timeout">saved_spotify_access_token_timeout</string>
 </resources>
