--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="saved_notifications_key">saved_notifications_key</string>
     <string name="saved_spotify_access_token">saved_spotify_access_token</string>
     <string name="saved_spotify_access_token_timeout">saved_spotify_access_token_timeout</string>
+    <string name="noPlaylistSelected">You have to select a playlist</string>
 </resources>
