--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="main_page_title">Alarm</string>
     <string name="set_alarm">Set</string>
     <string name="settings_top_button">Settings</string>
+    <string name="alarm_log_top_button">Log</string>
     <string name="settings_top_button_description">Open settings</string>
+    <string name="alarm_log_top_button_description">Open alarm logs</string>
     <string name="notifications_top_button">Notifications</string>
     <string name="notifications_top_button_description">Open notifications</string>
     <string name="remove_alarm">Remove</string>
